[CHANGE] Bootstrap and Font-Awesome classes updated

--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -40,7 +40,7 @@
                 {% endfor %}
             </ul>
 
-            <div class="tab-content">
+            <div class="tab-content mt-3 border-top">
                 {% for character in characters %}
                     <div id="content-{{ character.character_id }}" class="tab-pane fade card-default{% if forloop.first %} show active{% endif %}">
                         <div class="card-body">
