--- a/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
@@ -38,7 +38,7 @@
                                 data-body-text="{% blocktranslate with esi_fleet_id=link.esi_fleet_id character_name=link.character.character_name %}<p>Are you sure you want to close ESI fleet with ID {{ esi_fleet_id }} from {{ character_name }}</p>{% endblocktranslate %}"
                                 data-confirm-text="{% translate 'Stop tracking' %}"
                             >
-                                <i class="fas fa-times"></i>
+                                <i class="fa-solid fa-times"></i>
                                 <!-- {% translate "Stop tracking" %} -->
                             </button>
                         {% endif %}
