--- a/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
@@ -26,7 +26,7 @@
                             {% endif %}
 
                             {% if fat.fatlink.is_esilink %}
-                                <span class="label label-success afat-label afat-label-via-esi">via ESI</span>
+                                <span class="badge bg-secondary afat-label ms-2">ESI</span>
                             {% endif %}
                         </td>
                         <td>
