--- a/afat/templates/afat/view/fatlinks/fatlinks_overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_overview.html
@@ -75,7 +75,7 @@
             translation: {
                 dataTable: {
                     filter: {
-                        viaEsi: '{% translate "via ESI" %}'
+                        viaEsi: '{% translate "ESI" %}'
                     }
                 },
             },
