--- a/afat/templates/afat/partials/statistics/corporation/tabs/member.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/member.html
@@ -20,7 +20,7 @@
                         <td>{{ value.0 }}</td>
                         <td class="text-end">
                             <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_character' value.1 year month %}">
-                                <span class="glyphicon glyphicon-eye-open"></span>
+                                <i class="fa-solid fa-eye"></i></span>
                             </a>
                         </td>
                     </tr>
