--- a/afat/templates/afat/partials/statistics/overview/tabs/mine.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/mine.html
@@ -15,7 +15,7 @@
             {% for char in charstats %}
                 <li class="afat-stats-character-tab{% if forloop.first %} active{% endif %}">
                     <a data-toggle="tab" href="#{{ char.2 }}">
-                        <img class="img-circle" src="{{ char.2|character_portrait_url:32 }}" alt="{{ char.0 }}" style="margin-right: 0.25rem;">
+                        <img class="rounded" src="{{ char.2|character_portrait_url:32 }}" alt="{{ char.0 }}" style="margin-right: 0.25rem;">
                         {{ char.0 }}
                     </a>
                 </li>
@@ -44,7 +44,7 @@
                                                 <td>{{ fatcount }}</td>
                                                 <td class="text-end">
                                                     <a href="{% url 'afat:statistics_character' char.2 year month %}" class="btn btn-primary btn-sm">
-                                                        <span class="glyphicon glyphicon-eye-open"></span>
+                                                        <i class="fa-solid fa-eye"></i>
                                                     </a>
                                                 </td>
                                             </tr>
