--- a/afat/templates/afat/view/statistics/statistics_alliance_year_overview.html
+++ b/afat/templates/afat/view/statistics/statistics_alliance_year_overview.html
@@ -49,7 +49,7 @@
                             <td class="text-end">
                                 {% if alliance != "No Alliance" %}
                                     <a href="{% url 'afat:statistics_alliance' allianceid year month.0 %}" class="btn btn-primary btn-sm">
-                                        <span class="glyphicon glyphicon-eye-open"></span>
+                                        <i class="fa-solid fa-eye"></i>
                                     </a>
                                 {% endif %}
                             </td>
