--- a/afat/templates/afat/view/statistics/statistics_corporation_year_overview.html
+++ b/afat/templates/afat/view/statistics/statistics_corporation_year_overview.html
@@ -48,7 +48,7 @@
                             <td class="text-end">
                                 {% if corporation != "No Alliance" %}
                                     <a href="{% url 'afat:statistics_corporation' corpid year month.0 %}" class="btn btn-primary btn-sm">
-                                        <span class="glyphicon glyphicon-eye-open"></span>
+                                        <i class="fa-solid fa-eye"></i>
                                     </a>
                                 {% endif %}
                             </td>
