[CHANGE] Footer template

--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -26,7 +26,7 @@
             {% block afat_body %}{% endblock %}
         </div>
 
-        <div class="allianceauth-afat-footer">
+        <div class="allianceauth-afat-footer mt-3 pt-3 border-top border-light">
             {% include "afat/partials/footer/app-translation-footer.html" %}
         </div>
     </div>
