--- a/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
@@ -30,13 +30,13 @@
 {% endblock %}
 
 {% block extra_css %}
-    {% include "bundles/datatables-css.html" %}
+    {% include "bundles/datatables-css-bs5.html" %}
     {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
 
 {% block extra_javascript %}
     {% include "afat/bundles/afat-js.html" %}
-    {% include "bundles/datatables-js.html" %}
+    {% include "bundles/datatables-js-bs5.html" %}
     {% include "bundles/clipboard-js.html" %}
 
     <script>
