--- a/afat/templates/afat/partials/year_navigation.html
+++ b/afat/templates/afat/partials/year_navigation.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 
-<div class="afat-select-time-period afat-select-year">
+<div class="afat-select-time-period afat-select-year my-3">
     <a class="btn btn-primary btn-sm" href="{{ url_previous_year }}" title='{% translate "Previous year" %}'><i class="fa-solid fa-backward"></i></a>
 
-    <span class="afat-label-statistics">{{ year }}</span>
+    <span class="afat-label-statistics mx-3">{{ year }}</span>
 
     {% if year_next <= year_current %}
         <a class="btn btn-primary btn-sm" href="{{ url_next_year }}" title='{% translate "Next year" %}'><i class="fa-solid fa-forward"></i></a>
