--- a/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
@@ -29,8 +29,7 @@
                         {% translate 'Participation is being tracked via ESI' %}
 
                         {% if request.user == link.creator %}
-                            <button class="btn btn-primary btn-xs"
-                                style="margin-left: 0.25rem;"
+                            <button class="btn btn-primary btn-sm ms-1"
                                 title="{% translate 'Clicking here will stop the automatic tracking through ESI for this fleet and close the associated FAT link.' %}"
                                 data-bs-toggle="modal"
                                 data-bs-target="#cancelEsiFleetModal"
