--- a/afat/templates/afat/partials/month_navigation.html
+++ b/afat/templates/afat/partials/month_navigation.html
@@ -1,10 +1,10 @@
 {% load afat %}
 {% load i18n %}
 
-<div class="afat-select-time-period afat-select-month">
+<div class="afat-select-time-period afat-select-month my-3">
     <a class="btn btn-primary btn-sm" href="{{ url_previous_month }}" title='{% translate "Previous month" %}'><i class="fa-solid fa-backward"></i></a>
 
-    <span class="afat-label-statistics">{{ month|month_name }} {{ year }}</span>
+    <span class="afat-label-statistics mx-3">{{ month|month_name }} {{ year }}</span>
 
     {% if month_next <= month_current %}
         <a class="btn btn-primary btn-sm" href="{{ url_next_month }}" title='{% translate "Next month" %}'><i class="fa-solid fa-forward"></i></a>
