--- a/afat/templates/afat/partials/fatlinks/details/fatlink_name_form.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink_name_form.html
@@ -2,7 +2,7 @@
 
 <div class="col-md-12">
     <div class="row">
-        <form class="form" role="form" action="" method="POST" style="margin-bottom: 2rem;">
+        <form class="form mb-3" role="form" action="" method="POST">
             {% csrf_token %}
 
             <div class="row">
