--- a/afat/templates/afat/partials/statistics/overview/tabs/corps.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/corps.html
@@ -7,14 +7,14 @@
             <h4>{% translate "Corporations <small>(Click on an alliance name to see their corporations)</small>" %}</h4>
         {% endif %}
 
-        <div class="card-group" id="accordion" role="tablist" aria-multiselectable="true" style="margin-bottom: 0;">
+        <div class="card-group mb-0" id="accordion" role="tablist" aria-multiselectable="true">
             {% if perms.afat.stats_corporation_other or perms.afat.manage_afat %}
                 {% for key, value in data.items|dictsort:0 %}
                     {% if value|length > 0 %}
                         <div class="card card-default">
                             <div class="card-header" role="tab" id="heading{{ value.0 }}">
                                 <div class="card-title mb-0">
-                                    <img class="rounded" src="{{ value.0|alliance_logo_url:32 }}" alt="{{ key }}" style="margin-right: 0.25rem;">
+                                    <img class="rounded me-1" src="{{ value.0|alliance_logo_url:32 }}" alt="{{ key }}">
 
                                     <a role="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#{{ value.0 }}" aria-expanded="false" aria-controls="{{ value.0 }}">
                                         {{ key }}
@@ -30,14 +30,14 @@
 
                             <div id="{{ value.0 }}" class="card-collapse collapse" role="tabpanel" aria-labelledby="heading{{ value.0 }}">
                                 <div class="card-body">
-                                    <table class="table table-striped table-hover" style="margin-bottom: 0;">
+                                    <table class="table table-striped table-hover mb-0">
                                         <tbody>
                                             {% for corp in value %}
                                                 {% if forloop.first %}
                                                 {% else %}
                                                     <tr>
                                                         <td>
-                                                            <img class="rounded" src="{{ corp.0|corporation_logo_url:32 }}" alt="{{ corp.1 }}" style="margin-right: 0.25rem;">
+                                                            <img class="rounded me-1" src="{{ corp.0|corporation_logo_url:32 }}" alt="{{ corp.1 }}">
                                                             {{ corp.1 }}
                                                         </td>
 
@@ -57,11 +57,11 @@
                     {% endif %}
                 {% endfor %}
             {% elif perms.afat.stats_corporation_own %}
-                <table class="table table-striped table-hover" style="margin-bottom: 0;">
+                <table class="table table-striped table-hover mb-0">
                     <tbody>
                         <tr>
                             <td>
-                                <img class="rounded" src="{{ data.0.0|corporation_logo_url:32 }}" alt="{{ data.0.1 }}" style="margin-right: 0.25rem;">
+                                <img class="rounded me-1" src="{{ data.0.0|corporation_logo_url:32 }}" alt="{{ data.0.1 }}">
                                 {{ data.0.1 }}
                             </td>
 
