--- a/afat/templates/afat/partials/statistics/overview/tabs/mine.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/mine.html
@@ -15,7 +15,7 @@
             {% for char in charstats %}
                 <li class="afat-stats-character-tab{% if forloop.first %} active{% endif %}">
                     <a data-toggle="tab" href="#{{ char.2 }}">
-                        <img class="rounded" src="{{ char.2|character_portrait_url:32 }}" alt="{{ char.0 }}" style="margin-right: 0.25rem;">
+                        <img class="rounded me-1" src="{{ char.2|character_portrait_url:32 }}" alt="{{ char.0 }}">
                         {{ char.0 }}
                     </a>
                 </li>
