[CHANGE] Statistics dashboard templates to Bootstrap 5

--- a/afat/static/afat/css/afat.css
+++ b/afat/static/afat/css/afat.css
@@ -51,7 +51,7 @@
 ------------------------------------------------------------------------------------- */
 @media all {
     .afat-select-time-period {
-        font-size: 19px;
+        font-size: 1.25rem;
         font-weight: 400;
         line-height: 1.1;
     }
