--- a/afat/templates/afat/partials/dashboard/tabs_navigation.html
+++ b/afat/templates/afat/partials/dashboard/tabs_navigation.html
@@ -23,7 +23,7 @@
             href="#tab-fatlinks"
             role="tab"
             aria-controls="tab-fatlinks"
-            aria-selected="true"
+            aria-selected="false"
         >
             {% translate "FAT links" %}
         </a>
