--- a/afat/templates/afat/partials/statistics/overview/tabs/corps.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/corps.html
@@ -1,48 +1,65 @@
 {% load evelinks %}
 {% load i18n %}
 
-<div id="corps" class="tab-pane fade card card-default">
+<div id="tab-corps" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-corps">
     <div class="card-body">
         {% if user_can_see_other_corps %}
-            <h4>{% translate "Corporations <small>(Click on an alliance name to see their corporations)</small>" %}</h4>
+            <header class="mb-3">
+                <h4>
+                    {% translate "Corporations" %}
+                    <span class="small text-muted">({% translate "Click on an alliance name to see their corporations" %})</span>
+                </h4>
+            </header>
         {% endif %}
 
-        <div class="card-group mb-0" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="accordion accordion-flush mb-0" id="accordion" id="accordionAlliances">
             {% if perms.afat.stats_corporation_other or perms.afat.manage_afat %}
                 {% for key, value in data.items|dictsort:0 %}
                     {% if value|length > 0 %}
-                        <div class="card card-default">
-                            <div class="card-header" role="tab" id="heading{{ value.0 }}">
-                                <div class="card-title mb-0">
-                                    <img class="rounded me-1" src="{{ value.0|alliance_logo_url:32 }}" alt="{{ key }}">
+                        <div class="accordion-item">
+                            <div class="accordion-header clearfix position-relative" id="heading{{ value.0 }}">
+                                <span class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ value.0 }}" aria-expanded="false" aria-controls="collapse{{ value.0 }}">
+                                    <img class="rounded me-3" src="{{ value.0|alliance_logo_url:32 }}" alt="{{ key }}">
 
-                                    <a role="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#{{ value.0 }}" aria-expanded="false" aria-controls="{{ value.0 }}">
+                                    <span class="d-block" style="width: calc(100% - 110px);">
                                         {{ key }}
-                                    </a>
+                                    </span>
+                                </span>
 
-                                    {% if key != 'No Alliance' %}
-                                        <a class="btn btn-primary btn-sm pull-right" href="{% url 'afat:statistics_alliance' value.0 year %}" role="button">
-                                            <i class="fa-solid fa-eye" style="color: rgb(255 255 255);"></i>
-                                        </a>
-                                    {% endif %}
-                                </div>
+                                {% if key != 'No Alliance' %}
+                                    <a
+                                        class="btn btn-primary btn-sm position-absolute btn-alliance-statistics"
+                                        href="{% url 'afat:statistics_alliance' value.0 year %}"
+                                        data-bs-toggle="tooltip"
+                                        data-bs-html="true"
+                                        data-bs-title="{% translate 'Alliance statistics for' %}:<br>{{ key }}"
+                                        style="top: 17px; right: 50px; z-index: 999;"
+                                    >
+                                        <i class="fa-solid fa-eye" style="color: rgb(255 255 255);"></i>
+                                    </a>
+                                {% endif %}
                             </div>
 
-                            <div id="{{ value.0 }}" class="card-collapse collapse" role="tabpanel" aria-labelledby="heading{{ value.0 }}">
-                                <div class="card-body">
+                            <div id="collapse{{ value.0 }}" class="accordion-collapse collapse" aria-labelledby="heading{{ value.0 }}" data-bs-parent="#accordionAlliances">
+                                <div class="accordion-body">
                                     <table class="table table-striped table-hover mb-0">
                                         <tbody>
                                             {% for corp in value %}
-                                                {% if forloop.first %}
-                                                {% else %}
+                                                {% if not forloop.first %}
                                                     <tr>
                                                         <td>
-                                                            <img class="rounded me-1" src="{{ corp.0|corporation_logo_url:32 }}" alt="{{ corp.1 }}">
+                                                            <img class="rounded me-3" src="{{ corp.0|corporation_logo_url:32 }}" alt="{{ corp.1 }}">
                                                             {{ corp.1 }}
                                                         </td>
 
                                                         <td class="text-end">
-                                                            <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_corporation' corp.0 year %}">
+                                                            <a
+                                                                class="btn btn-primary btn-sm"
+                                                                href="{% url 'afat:statistics_corporation' corp.0 year %}"
+                                                                data-bs-toggle="tooltip"
+                                                                data-bs-html="true"
+                                                                data-bs-title="{% translate 'Corporation statistics for' %}:<br>{{ corp.1 }}"
+                                                            >
                                                                 <i class="fa-solid fa-eye"></i>
                                                             </a>
                                                         </td>
@@ -56,6 +73,13 @@
                         </div>
                     {% endif %}
                 {% endfor %}
+
+{#                    <script>#}
+{#                        $(document).ready(() => {#}
+{#                            const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');#}
+{#                            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));#}
+{#                        });#}
+{#                    </script>#}
             {% elif perms.afat.stats_corporation_own %}
                 <table class="table table-striped table-hover mb-0">
                     <tbody>
