--- a/afat/templates/afat/partials/statistics/overview/tabs/mine.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/mine.html
@@ -2,21 +2,31 @@
 {% load evelinks %}
 {% load i18n %}
 
-<div id="mine" class="tab-pane fade in active card card-default">
+<div id="tab-mine" class="tab-pane fade show active card card-default border-0" role="tabpanel" aria-labelledby="tab-mine">
     <div class="card-body">
         <h4>{% translate "Your monthly stats" %}</h4>
 
         <p>
-            {% translate "Only months with FAT data of the selected year are shown." %}<br>
+            {% translate "Only months with FAT data for the selected year are shown." %}<br>
             {% translate "Only characters that have FATs for the selected year are shown." %}
         </p>
 
         <ul class="nav nav-pills">
             {% for char in charstats %}
-                <li class="afat-stats-character-tab{% if forloop.first %} active{% endif %}">
-                    <a data-toggle="tab" href="#{{ char.2 }}">
-                        <img class="rounded me-1" src="{{ char.2|character_portrait_url:32 }}" alt="{{ char.0 }}">
-                        {{ char.0 }}
+                <li class="afat-stats-character-tab text-center">
+                    <a
+                        data-toggle="tab"
+
+                        class="nav-link{% if forloop.first %} active{% endif %}"
+                        id="tab-{{ char.2 }}"
+                        data-bs-toggle="tab"
+                        href="#content-{{ char.2 }}"
+                        role="tab"
+                        aria-controls="content-{{ char.2 }}"
+                        aria-selected="{% if forloop.first %}true{% else %}false{% endif %}"
+                    >
+                        <img class="rounded" src="{{ char.2|character_portrait_url:64 }}" alt="{{ char.0 }}" width="48px" height="48px"><br>
+                        <span id="afat-eve-character-id-{{ char.2 }}">{{ char.0 }}</span>
                     </a>
                 </li>
             {% endfor %}
@@ -25,7 +35,7 @@
         <div class="tab-content">
             {% if charstats %}
                 {% for char in charstats %}
-                    <div id="{{ char.2 }}" class="tab-pane card-default fade{% if forloop.first %} in active{% endif %}">
+                    <div id="content-{{ char.2 }}" class="tab-pane fade card-default{% if forloop.first %} show active{% endif %}">
                         <div class="card-body">
                             {% if char.1|length > 0 %}
                                 <table class="table table-striped table-hover">
@@ -60,7 +70,7 @@
                     </div>
                 {% endfor %}
             {% else %}
-                <div class="alert alert-warning" role="alert">
+                <div class="aa-callout aa-callout-warning">
                     <p>{% translate "No FATs for this year at all" %}</p>
                 </div>
             {% endif %}
