[REMOVE] Title formatting from modals

--- a/afat/templates/afat/modals/general.html
+++ b/afat/templates/afat/modals/general.html
@@ -6,7 +6,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="modal-title fs-5" id="{{ modal_name }}ModalLongTitle">
-                    {{ modal_title|title }}
+                    {{ modal_title }}
                 </div>
 
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% translate 'Close' %}"></button>
