[CHANGE] Replace alerts with callouts

--- a/afat/templates/afat/partials/fatlinks/add/esi_link.html
+++ b/afat/templates/afat/partials/fatlinks/add/esi_link.html
@@ -14,7 +14,7 @@
             <p>
                 {% blocktranslate %}
                     This option will automatically register and track the entire fleet
-                    without fleet members having to click a link.<br><b>Use this if you
+                    without fleet members having to click a link. <b>Use this if you
                     are the Fleet Boss</b>, otherwise please use the clickable FAT link
                     option.
                 {% endblocktranslate %}
@@ -23,7 +23,7 @@
             <p>
                 {% blocktranslate %}
                     This will start tracking your fleet automatically and add pilots to
-                    it as they join until the fleet is either closed ingame
+                    it as they join until the fleet is either closed in-game
                     (meaning you leave the fleet), or you stop the tracking here.
                 {% endblocktranslate %}
             </p>
