--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -70,7 +70,7 @@
                 {% endfor %}
             </div>
         {% else %}
-            <div class="alert alert-warning" role="alert">
+            <div class="aa-callout aa-callout-warning" role="alert">
                 <p>
                     {% translate "No recent FAT activity registered for any of your characters." %}
                 </p>
