--- a/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
+++ b/afat/templates/afat/partials/fatlinks/open_esi_fleets.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% if esi_fleet.has_open_esi_fleets %}
-    <div class="alert alert-info">
+    <div class="aa-callout aa-callout-info" role="alert">
         <p>
             {% blocktranslate count esi_fleet.open_esi_fleets_list|length as open_esi_fleets %}
                 You currently have an active ESI fleet under the following character:
