--- a/afat/templates/afat/partials/statistics/overview/tabs/mine.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/mine.html
@@ -62,7 +62,7 @@
                                     </tbody>
                                 </table>
                             {% else %}
-                                <div class="alert alert-warning" role="alert">
+                                <div class="aa-callout aa-callout-warning" role="alert">
                                     <p>{% translate "No FATs for" %} {{ char.0 }}</p>
                                 </div>
                             {% endif %}
