--- a/afat/templates/afat/bundles/chartjs-js.html
+++ b/afat/templates/afat/bundles/chartjs-js.html
@@ -1,3 +1,3 @@
 {% load static %}
 
-<script src="{% static 'afat/libs/Chart.js/4.4.1/chart.min.js' %}"></script>
+<script src="{% static 'afat/libs/Chart.js/4.4.1/chart.umd.js' %}"></script>
