[CHANGE] Alliance statistics pages switched to BS5

--- a/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
@@ -1,7 +1,7 @@
 {% load evelinks %}
 {% load i18n %}
 
-<div class="tab-pane fade in card card-default" id="members">
+<div id="tab-members" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-fats">
     <div class="card-body">
         <h3>
             {{ alliance }} {% translate "Member corporations" as header_title %}
