--- a/afat/templates/afat/partials/statistics/alliance/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/graphs.html
@@ -1,71 +1,88 @@
 {% load i18n %}
 
-<div id="graphs" class="tab-pane fade in active card card-default">
+<div id="tab-graphs" class="tab-pane fade show active card card-default border-0" role="tabpanel" aria-labelledby="tab-graphs">
     <div class="card-body">
         <ul class="nav nav-pills">
-            <li class="active">
-                <a data-toggle="tab" href="#fatsbyship">
+            <li class="nav-item" role="presentation">
+                <a
+                    class="nav-link active"
+                    id="fatsbyship"
+                    data-bs-toggle="tab"
+                    href="#tab-fatsbyship"
+                    role="tab"
+                    aria-controls="tab-fatsbyship"
+                    aria-selected="true"
+                >
                     {% translate "FATs by ship type" %}
                 </a>
             </li>
-            <li>
-                <a data-toggle="tab" href="#avgfats">
+
+            <li class="nav-item" role="presentation">
+                <a
+                    class="nav-link"
+                    id="avgfats"
+                    data-bs-toggle="tab"
+                    href="#tab-avgfats"
+                    role="tab"
+                    aria-controls="tab-avgfats"
+                    aria-selected="true"
+                >
                     {% translate "Corporation performance" %}
                 </a>
             </li>
-            <li>
-                <a data-toggle="tab" href="#fatsbytime">
+
+            <li class="nav-item" role="presentation">
+                <a
+                    class="nav-link"
+                    id="fatsbytime"
+                    data-bs-toggle="tab"
+                    href="#tab-fatsbytime"
+                    role="tab"
+                    aria-controls="tab-fatsbytime"
+                    aria-selected="true"
+                >
                     {% translate "FATs by time" %}
                 </a>
             </li>
-            <li>
-                <a data-toggle="tab" href="#fatsbyweek">
+
+            <li class="nav-item" role="presentation">
+                <a
+                    class="nav-link"
+                    id="fatsbyweek"
+                    data-bs-toggle="tab"
+                    href="#tab-fatsbyweek"
+                    role="tab"
+                    aria-controls="tab-fatsbyweek"
+                    aria-selected="true"
+                >
                     {% translate "FATs by weekday" %}
                 </a>
             </li>
         </ul>
 
         <div class="tab-content">
-            <div class="tab-pane fade in active card-default" id="fatsbyship">
+            <div id="tab-fatsbyship" class="tab-pane fade show active card card-default border-0" role="tabpanel" aria-labelledby="tab-fatsbyship">
                 <div class="card-body">
                     <h4>{% translate "FATs by ship type" %}</h4>
 
                     <canvas id="ship-pie" width="800" height="500"></canvas>
 
                     <script>
-                        let shipPieChart = new Chart(document.getElementById("ship-pie"), {
+                        const element = document.querySelector('body')
+                        const style = getComputedStyle(element);
+                        console.log(style.color);
+
+                        Chart.defaults.color = style.color;
+
+                        const shipPieChart = new Chart(document.getElementById("ship-pie"), {
                             type: "pie",
                             data: {
                                 datasets: [{
-                                    data: {{ data_ship_type.1| safe }},
-                                    backgroundColor: {{ data_ship_type.2| safe }}
+                                    label: 'Ship Types',
+                                    data: {{ data_ship_type.1|safe }},
+                                    backgroundColor: {{ data_ship_type.2|safe }}
                                 }],
-                                labels: {{ data_ship_type.0 | safe }}
-                            },
-                            options: {
-                                responsive: true
-                            }
-                        });
-                    </script>
-                </div>
-            </div>
-
-            <div id="fatsbytime" class="tab-pane fade in card-default">
-                <div class="card-body">
-                    <h4>{% translate "FATs by time" %}</h4>
-
-                    <canvas id="time-line" width="800" height="500"></canvas>
-
-                    <script>
-                        let timeLineChart = new Chart(document.getElementById("time-line"), {
-                            type: 'line',
-                            data: {
-                                datasets: [{
-                                    label: '# of FATs',
-                                    backgroundColor: {{ data_time.2|safe }},
-                                    data: {{ data_time.1 }}
-                                }],
-                                labels: {{ data_time.0|safe }}
+                                labels: {{ data_ship_type.0|safe }}
                             },
                             options: {
                                 responsive: false
@@ -75,40 +92,15 @@
                 </div>
             </div>
 
-            <div class="tab-pane fade in card-default" id="fatsbyweek">
-                <div class="card-body">
-                    <h4>{% translate "FATs by weekday" %}</h4>
-
-                    <canvas id="weekday-line" width="800" height="500"></canvas>
-
-                    <script>
-                        let weekdayLineChart = new Chart(document.getElementById('weekday-line'), {
-                            type: 'line',
-                            data:{
-                                datasets: [{
-                                    label: '# of FATs',
-                                    backgroundColor: {{ data_weekday.2|safe }},
-                                    data: {{ data_weekday.1 }}
-                                }],
-                                labels: {{ data_weekday.0|safe }}
-                            },
-                            options: {
-                                responsive: false
-                            }
-                        });
-                    </script>
-                </div>
-            </div>
-
-            <div class="tab-pane fade in card-default" id="avgfats">
+            <div id="tab-avgfats" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-avgfats">
                 <div class="card-body">
                     <h4>{% translate "Average FATs by corporation" %}</h4>
 
                     <canvas id="avgs" width="1000" height="700"></canvas>
 
                     <script>
-                        let averagesHorizontalBarChart = new Chart(document.getElementById('avgs'), {
-                            type: 'horizontalBar',
+                        const averagesHorizontalBarChart = new Chart(document.getElementById('avgs'), {
+                            type: 'bar',
                             data:{
                                 datasets: [{
                                     label: 'Average # of FATs',
@@ -118,19 +110,58 @@
                                 labels: {{ data_avgs.0|safe }}
                             },
                             options: {
-                                responsive: false,
-                                scales: {
-                                    xAxes: [{
-                                        ticks: {
-                                            autoSkip: false
-                                        }
-                                    }],
-                                    yAxes:[{
-                                        ticks: {
-                                            beginAtZero: true
-                                        }
-                                    }]
-                                }
+                                responsive: true,
+                                indexAxis: 'y'
+                            }
+                        });
+                    </script>
+                </div>
+            </div>
+
+            <div id="tab-fatsbytime" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-fatsbytime">
+                <div class="card-body">
+                    <h4>{% translate "FATs by time" %}</h4>
+
+                    <canvas id="time-line" width="800" height="200vh"></canvas>
+
+                    <script>
+                        const timeLineChart = new Chart(document.getElementById("time-line"), {
+                            type: 'bar',
+                            data: {
+                                datasets: [{
+                                    label: '# of FATs',
+                                    backgroundColor: {{ data_time.2|safe }},
+                                    data: {{ data_time.1 }}
+                                }],
+                                labels: {{ data_time.0|safe }}
+                            },
+                            options: {
+                                responsive: true
+                            }
+                        });
+                    </script>
+                </div>
+            </div>
+
+            <div id="tab-fatsbyweek" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-fatsbyweek">
+                <div class="card-body">
+                    <h4>{% translate "FATs by weekday" %}</h4>
+
+                    <canvas id="weekday-line" width="800" height="200vh"></canvas>
+
+                    <script>
+                        const weekdayLineChart = new Chart(document.getElementById('weekday-line'), {
+                            type: 'bar',
+                            data:{
+                                datasets: [{
+                                    label: '# of FATs',
+                                    backgroundColor: {{ data_weekday.2|safe }},
+                                    data: {{ data_weekday.1 }}
+                                }],
+                                labels: {{ data_weekday.0|safe }}
+                            },
+                            options: {
+                                responsive: true
                             }
                         });
                     </script>
