--- a/afat/templates/afat/partials/statistics/alliance/tabs_navigation.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs_navigation.html
@@ -1,6 +1,34 @@
 {% load i18n %}
 
 <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#graphs">{% translate "Graphs" %}</a></li>
-    <li><a data-toggle="tab" href="#members">{% translate "Corporations" %}</a></li>
+{#    <li class="active"><a data-toggle="tab" href="#graphs">{% translate "Graphs" %}</a></li>#}
+{#    <li><a data-toggle="tab" href="#members">{% translate "Corporations" %}</a></li>#}
+
+    <li class="nav-item" role="presentation">
+        <a
+            class="nav-link active"
+            id="graphs"
+            data-bs-toggle="tab"
+            href="#tab-graphs"
+            role="tab"
+            aria-controls="tab-graphs"
+            aria-selected="true"
+        >
+            {% translate "Graphs" %}
+        </a>
+    </li>
+
+    <li class="nav-item" role="presentation">
+        <a
+            class="nav-link"
+            id="members"
+            data-bs-toggle="tab"
+            href="#tab-members"
+            role="tab"
+            aria-controls="tab-members"
+            aria-selected="true"
+        >
+            {% translate "Corporations" %}
+        </a>
+    </li>
 </ul>
