[FIX] These are headlines …

--- a/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
+++ b/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
@@ -10,7 +10,7 @@
                     {% translate "FATs for this FAT link" as header %}
                 {% endif %}
 
-                <div class="h4">{{ header }}</div>
+                <h4>{{ header }}</h4>
 
                 <table class="table table-striped table-hover w-100" id="fleet-edit-fat-list">
                     <thead>
@@ -27,9 +27,9 @@
             </div>
 
             <div class="col-md-4">
-                <div class="h4">
+                <h4>
                     {% translate "Ship type overview" %}
-                </div>
+                </h4>
 
                 <table class="table table-striped table-hover w-100" id="fleet-edit-ship-types">
                     <thead>
