[FIX] JS variable declaration

--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 <script>
-    let characters = [];
+    const characters = [];
 </script>
 
 <div id="tab-fats" class="tab-pane fade show active card card-default border-0" role="tabpanel" aria-labelledby="tab-fats">
